# pyGuiProjectTemplate

./: .gitignore  LICENSE.md  README.md  composer.json  global.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: documentation.yml  labeler.yml  submodule-update.yml  tests.yaml
docs/: 00_Getting_Started.md  config.json
